--- a/c_addons/college_management/wizards/student_info_wizard.xml
+++ b/c_addons/college_management/wizards/student_info_wizard.xml
@@ -18,10 +18,19 @@
                     <group>
                         <field name="test_ids"/>
                         <field name="user_ids"/>
+
+                    </group>
+                    <group>
+                        <field name="user_signature" widget="signature"/>
                     </group>
                 </group>
+                <footer>
+                    <button name="sample_btn" type="object" string="Submit"/>
+                    <button special="cancel" string="Cancel" />
+                </footer>
             </sheet>
         </form>
+
       </field>
     </record>
 
