[IMP]magic fields,search view,filter,group by,message post

--- a/c_addons/college_management/views/views.xml
+++ b/c_addons/college_management/views/views.xml
@@ -7,6 +7,10 @@
       <field name="model">college_management.college_management</field>
       <field name="arch" type="xml">
         <tree>
+             <header>
+            <button type="object" name="create_record" string="new"/>
+            </header>
+
           <field name="name"/>
 <!--          <field name="value"/>-->
 <!--          <field name="value2"/>-->
