--- a/projects/college_management/views/college_management.xml
+++ b/projects/college_management/views/college_management.xml
@@ -11,7 +11,8 @@
                     <button type="object" name="create_record" string="new"/>
                 </header>
 
-                <field name="name" widget="handle"/>
+<!--                <field name="name" widget="handle"/>-->
+                <field name="age"/>
                 <!--          <field name="value"/>-->
                 <!--          <field name="value2"/>-->
                 <field name="branch_id"/>
