--- a/projects/smart_view/views/res_partner.xml
+++ b/projects/smart_view/views/res_partner.xml
@@ -7,6 +7,8 @@
         <field name="arch" type="xml">
             <field name="vat" position="after">
                 <field name="customer_ref_no" string="customer ref"/>
+                <field name="birth_date" string="Date of Birth"/>
+                <field name="age" string="Age"/>
             </field>
         </field>
     </record>
