--- a/projects/smart_view/views/res_settings.xml
+++ b/projects/smart_view/views/res_settings.xml
@@ -5,13 +5,15 @@
             <field name="model">res.config.settings</field>
             <field name="inherit_id" ref="base.res_config_settings_view_form"/>
             <field name="arch" type="xml">
-                <xpath expr="//div[hasclass('settings')]//div[@id='languages']" position="inside">
+                <xpath expr="//div[hasclass('settings')]//div[@id='invite_users']" position="inside">
                     <h2>Test block</h2>
                     <div class="row mt16 o_settings_container" name="catalog_setting_container">
 
                         <div class="col-12 col-lg-6 o_setting_box">
                             <label for="name_char"/>
                             <field name="name_char" attrs="{'invisible':[('is_checked','=',False)]}" widget="html"/>
+                            <label for="name_id"/>
+                            <field name="name_id" attrs="{'invisible':[('is_checked','=',False)]}"/>
                             <div class="text-muted">
 
                             </div>
@@ -22,17 +24,6 @@
                             </div>
                             <div class="o_setting_right_pane">
                                 <label for="is_checked" string="Name"/>
-                                <div class="text-muted">
-
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-12 col-lg-6 o_setting_box">
-                            <div class="o_setting_left_pane">
-                                <field name="is_active"/>
-                            </div>
-                            <div class="o_setting_right_pane">
-                                <label for="is_active" string="New Name"/>
                                 <div class="text-muted">
 
                                 </div>
