[IMP]added qweb report,modified name_get for displaying only name without false value

--- a/projects/smart_view/wizards/sale_order_wizard.xml
+++ b/projects/smart_view/wizards/sale_order_wizard.xml
@@ -14,9 +14,14 @@
                     <field name="customer"/>
                     <field name="customer_email"/>
                     <field name="sales_person"/>
-                    <field name="sales_person_contact"/>
+<!--                    <field name="sales_person_contact"/>-->
                     <field name="paymentterms_id"/>
                 </group>
+                <footer>
+                    <button type="object" name="create_wizard_record" string="CREATE" class="btn-primary"/>
+                    <button type="object" name="write_wizard_record" string="WRITE" class="btn-success"/>
+<!--                    <button type="object" name="create_wizard_record" string="CREATE"/>-->
+                </footer>
             </form>
 
         </field>
