--- a/projects/rental_management/reports/report_1.xml
+++ b/projects/rental_management/reports/report_1.xml
@@ -1,33 +1,51 @@
 <odoo>
     <data>
-        <template id="smart_view_template">
+        <template id="report_rental_management">
             <t t-call="web.html_container">
                 <t t-foreach="docs" t-as="o">
                     <t t-call="web.external_layout">
                         <div class="page">
+                            <h2>DATA</h2>
                             <br/>
                             <br/>
                             <ul>
-                                <li>Name : <span t-field="o.name"/></li>
-                                <li>Customer : <span t-field="o.customer_id"/></li>
-                                <li>Rental type : <span t-field="o.rental_type_id"/></li>
-                                <li>Rental Product : <span t-field="o.rental_product_id"/></li>
-                                <li>Start Date : <span t-field="o.startdate"/></li>
-                                <li>End Date : <span t-field="o.enddate"/></li>
-                                <li>Price : <span t-field="o.price"/></li>
+                                <li>Name :
+                                    <span t-field="o.name"/>
+                                </li>
+                                <li>Customer :
+                                    <span t-field="o.customer_id"/>
+                                </li>
+                                <li>Rental type :
+                                    <span t-field="o.rental_type_id"/>
+                                </li>
+                                <li>Rental Product :
+                                    <span t-field="o.rental_product_id"/>
+                                </li>
+                                <li>Start Date :
+                                    <span t-field="o.startdate"/>
+                                </li>
+                                <li>End Date :
+                                    <span t-field="o.enddate"/>
+                                </li>
+                                <li>Price :
+                                    <span t-field="o.price"/>
+                                </li>
                             </ul>
                         </div>
                     </t>
                 </t>
             </t>
         </template>
-    </data>
-    <report
-        id="smart_report_id"
-        model="rental.management"
-        report_type="qweb-pdf"
-        string="print invoice"
-        name="rental_management.smart_view_template"
-        file="rental_management.smart_view_template"/>
 
+        <template id="report_rental_reference">
+            <t t-call="web.html_container">
+                <t t-call="web.external_layout">
+                    <t t-foreach="docs" t-as="doc">
+                        <t t-call="rental_management.report_rental_management"/>
+                    </t>
+                </t>
+            </t>
+        </template>
+
+    </data>
 </odoo>
